# alphazero-general-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile
.devcontainer/: devcontainer.json
config/agents/: default.jsonc  tic-tac-toe.jsonc
config/architectures/: default.jsonc  tic-tac-toe.jsonc
config/game/: default.jsonc  tic-tac-toe.jsonc
config/train/: default.jsonc  tic-tac-toe.jsonc
src/: Game.cpp  Game.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  main.cpp
src/lib/Agent/: Agent.cpp  Agent.hpp
src/lib/ArgumentParsing/: Argument.hpp  ArgumentParser.hpp  InputParser.hpp
src/lib/Configuration/: Configuration.cpp  Configuration.hpp  Configuration.ipp
src/lib/DataManager/: DataManager.cpp  DataManager.hpp  Dataset.cpp  Dataset.hpp  Helpers.hpp  MemoryElement.hpp
src/lib/Environment/: Environment.cpp  Environment.hpp  Environment_TicTacToe.cpp  Environment_TicTacToe.hpp  Move.hpp  Move_TicTacToe.cpp  Move_TicTacToe.hpp
src/lib/Logging/: CustomSink.hpp  Logger.cpp  Logger.hpp  StdoutSink.cpp  StdoutSink.hpp
src/lib/MCTS/: MCTS.cpp  MCTS.hpp  Node.cpp  Node.hpp
src/lib/NeuralNetwork/: Architecture.hpp  ConvBlock.hpp  Device.cpp  Device.hpp  Network.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkInterface.hpp  PolicyHead.hpp  ResidualBlock.hpp  Trainer.cpp  Trainer.hpp  ValueHead.hpp
src/lib/NeuralNetwork/Architecture/: ConvBlock.hpp  Network.hpp  ValueHead.hpp
src/lib/Utilities/: Functions.hpp  RandomGenerator.hpp  Time.hpp
test/: main.cpp
test/Fixtures/: fixture_Game.hpp  fixture_MCTS.hpp  fixture_RandomGenerator.hpp  fixture_TicTacToeEnvironment.hpp
test/Mocks/: mock_Environment.hpp  mock_NeuralNetwork.hpp
test/Tests/: test_mcts.cpp  test_randomGenerator.cpp  test_ticTacToeEnvironment.cpp  test_utilities.cpp
